@@ -27,6 +27,8 @@
 	fixed support for older versions of perl (5.00x)
 	fixed a bug in the DB2 connection that caused blob input binds to be
 		truncated at the first null
+	added support for binding streams to output bind blobs in the PHP PDO
+		driver
 
 0.57 - fixed an overloaded virtual function error in sqlr-status
 	fixed parsing of "term as type" clauses in queries
